[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4",
    "setuptools_scm_git_archive",
]

[tool.setuptools_scm]
write_to = "elevation/version.py"

[tool.black]
line-length = 105
skip-string-normalization = true

[tool.pytest.ini_options]
norecursedirs = [
    "build",
    "docs",
    ".tox",
]

[tool.coverage.run]
branch = true
omit = ["setup.py"]
